<resources>
    <string name="app_name">Orenkasko</string>

    <string name="action_next">ДАЛЕЕ</string>

    <string name="phone_start_text">+7(</string>

    <string name="error_incorrect_phone">Возможно телефонный номер несуществует</string>
    <string name="error_incorrect_phone_code">Возможно пароль неверен</string>
    <string name="error_invalid_phone">Этот номер телефона некорректный</string>
    <string name="error_field_required">Это поле обязательно для заполнения</string>


    <string name="error_name_empty">Введите имя</string>
    <string name="error_name_incorrect">Некорректное имя</string>


    <!-- template -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>


    <string name="phone_text_hint">номер телефона</string>
    <string name="phone_text_hint_2">+7(xxx)-xxx-xx-xx</string>
    <string name="phone_pass_text_hint">Пароль</string>
    <string name="phone_pass_replay">Отправить повторно</string>

    <string name="error_invalid_phone_password">Пароль некорректный</string>
    <string name="error_text_replay_pass">Отправить можно тольлко через </string>
    <string name="name_text_hint">Имя</string>

    <string name="text_credits">Я согласен с условиями <a href="https://www.google.ru">пользовательского соглашения</a></string>
    <string name="credits_link">https://www.google.ru</string>
    <string name="credits_checked_error">Необходимо согласится с условиями пользовательского соглашения</string>
    <string name="item_balance">Баланс</string>
    <string name="item_osago">ОСАГО</string>
    <string name="item_orders">Заявки</string>
    <string name="item_logout">Выход</string>
    <string name="item_info">О программе</string>
    <string name="action_balance">Пополнить</string>
    <string name="order_title">ОСАГО #12343</string>

    <string name="spin_way">Владелец</string>
    <string name="spin_type">Тип транспорта</string>

    <string name="spin_sub_type" />
    <string name="spin_power">Мощность двигателя</string>
    <string name="spin_period_ispolzovania">Срок страхования</string>
    <string name="spin_region">Место регистрации собственника</string>
    <string name="spin_city">Населенный пункт</string>
    <string name="spin_navigat" >Допущенные к управлению водители</string>
    <string name="spin_driver_age">Возраст и водительский стаж</string>
    <string name="spin_first">Страхование впервые?</string>
    <string name="spin_discount">Скидка за безаварийную езду:</string>

    <string name="action_osago">Оформить</string>
    <string name="amount_text" >Стоимость : </string>
    <string name="spin_name_insurance">Страховая компания</string>
    <string name="item_profile">Профиль</string>
    <string name="you_photo">Ваша фотография</string>
    <string name="personal_data">Личные данные</string>
    <string name="personal_data_2">Персональные данные</string>
    <string name="fio">Ф.И.О.</string>
    <string name="email">Эл. почта</string>
    <string name="docs">Документы</string>
    <string name="docs_dops">Дополнительные данные</string>
    <string name="comments">Комментарии</string>

    <string name="pasport_insurent">Паспорт страхователя</string>
    <string name="pasport_owner">Паспорт собственника</string>
    <string name="chooser_image_title">Select your image:</string>
    <string name="first_list">Первая страница</string>
    <string name="second_list">Вторая страница</string>
    <string name="docs_data_text_start">Дата начала</string>
    <string name="docs_data_text_end">Дата окончания</string>
    <string name="drivings_permits">Водительские удостоверения</string>
    <string name="pasport_transport">ПТС или СТС</string>
    <string name="diagnostic_card">Диагностическая Карта</string>
    <string name="name_card">Номер карты</string>
    <string name="error_incorrect_phone_pass">Неверный пароль или телефон!</string>

    <string name="order_tabs_sketch">Черновики</string>
    <string name="order_tabs_in_the_work">Оформление</string>
    <string name="order_tabs_excuted">Выполненные</string>

</resources>
