<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_osago"
            android:icon="@drawable/osago_black"
            android:title="@string/item_osago" />
        <item
            android:id="@+id/nav_balance"
            android:icon="@drawable/ic_balance"
            android:title="@string/item_balance" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/orders"
            android:title="@string/item_orders" />

    </group>

    
    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/info"
                android:title="@string/item_info" />
            <item
                android:id="@+id/nav_manage"
                android:icon="@drawable/logout"
                android:title="@string/item_logout" />
        </menu>
    </item>

</menu>