<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/activity_balance_vertical_margin">

        <TextView
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/title_padding"
            android:text="@string/personal_data" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <EditText
                    style="@style/item_personel_data_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/fio" />

                <EditText
                    style="@style/item_personel_data_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email" />

                <EditText
                    style="@style/item_personel_data_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_text_hint_2" />

                <EditText
                    style="@style/item_personel_data_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/comments" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!-- ############################################################ -->

        <TextView
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/title_padding"
            android:text="@string/docs" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                style="@style/Widget.CardContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <TextView
                    style="@style/item_personel_data_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pasport_way" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="124dp"
                        android:layout_height="124dp"
                        android:layout_margin="@dimen/title_padding"
                        android:background="#a7ba8530" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_alignEnd="@+id/imageView2"
                        android:layout_alignRight="@+id/imageView2"
                        android:layout_alignTop="@+id/imageView2"
                        app:srcCompat="@drawable/ic_erace" />

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:layout_centerInParent="true"
                        app:srcCompat="@drawable/camera" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_alignLeft="@+id/imageView4"
                        android:layout_alignEnd="@+id/imageView4"
                        android:layout_centerHorizontal="true"
                        android:text="Первая страница" />

                </RelativeLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>


</android.support.v4.widget.NestedScrollView>
